# mcp-server

./: .gitignore  README.md  dockerfile  pyproject.toml
mcp_server/: __init__.py
mcp_server/gmail/: __init__.py  gmail_client.py  server.py
