[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for Gmail integration"
readme = "README.md"
requires-python = ">=3.13.3" # Note: >=3.8 is generally safer unless you *need* 3.13 features
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.3",
]

[project.scripts]
gmail-server = "mcp_server.gmail.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"